--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,25 @@
-# dependencies
-.nvmrc
-/node_modules
+# Build output
+dist/
+.output/
 
-# testing
-/coverage
+# Dependencies
+node_modules/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
+# Cache
+.eslintcache
+
+# Environment variables
 .env
-.env.development
-.env.production
+.env*.local
+.env*.production
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
+# misc
+*.pem
+.DS_Store
+Thumbs.db
