feat: migrate environment #1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom", "dom.iterable"],
-    "types": ["@astrojs/image/client"]
   },
   "extends": "astro/tsconfigs/strict",
   "exclude": ["node_modules"],
-  "include": ["utils/**/*.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.svelte"]
+  "include": ["utils/**/*.ts", "src/**/*.astro", "src/**/*.ts", "src/**/*.tsx", "src/**/*.svelte"]
 }
