--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.0.2",
-    "astro": "^2.0.11",
-    "svelte": "^3.55.1"
+    "@astrojs/svelte": "^5.0.3",
+    "@types/pubsub-js": "^1.8.6",
+    "@types/throttle-debounce": "^5.0.2",
+    "astro": "^4.1.2",
+    "astro-icon": "^1.1.0",
+    "pubsub-js": "^1.9.4",
+    "svelte": "^4.2.17",
+    "three": "^0.165.0",
+    "tweakpane": "^4.0.3"
   },
   "devDependencies": {
-    "@astrojs/image": "^0.15.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-yaml": "^4.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
-    "astro-compress": "^1.1.25",
+    "astro-compress": "2.2.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-astro": "^0.21.1",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-astro": "^0.31.3",
+    "eslint-plugin-svelte": "^2.35.1",
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
     "node-sass-glob-importer": "^5.3.2",
@@ -39,7 +45,6 @@
     "prettier": "^2.8.1",
     "prettier-plugin-astro": "^0.7.2",
     "sass": "^1.57.1",
-    "sharp": "^0.31.3",
     "stylelint": "14.16.1",
     "stylelint-config-html": "1.1.0",
     "stylelint-scss": "4.4.0"
