feat: migrate astro.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-basic-template",
-  "version": "0.1.1",
+  "version": "1.3.2",
   "license": "MIT",
   "private": true,
   "author": "uuki <uuki.dev@gmail.com>",
@@ -12,41 +12,51 @@
     "clean": "rimraf dist",
     "lint:es": "eslint --cache 'src/**/*.{astro,js,ts,json}'",
     "lint:style": "stylelint 'src/**/*.scss'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "plop": "npx plop component"
   },
   "dependencies": {
-    "@astrojs/svelte": "^5.0.3",
     "@types/pubsub-js": "^1.8.6",
     "@types/throttle-debounce": "^5.0.2",
-    "astro": "^4.1.2",
-    "astro-icon": "^1.1.0",
-    "pubsub-js": "^1.9.4",
-    "svelte": "^4.2.17",
-    "three": "^0.165.0",
-    "tweakpane": "^4.0.3"
+    "astro": "5.6.1",
+    "astro-icon": "^1.1.5",
+    "pubsub-js": "^1.9.5",
+    "svelte": "^5.25.12",
+    "three": "^0.181.2",
+    "throttle-debounce": "^5.0.2",
+    "tweakpane": "^4.0.5"
   },
   "devDependencies": {
+    "@astrojs/svelte": "7.1.0",
+    "@csstools/postcss-global-data": "3.0.0",
+    "@iconify/json": "^2.2.273",
     "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-yaml": "^4.0.1",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "astro-compress": "2.2.3",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-astro": "^0.31.3",
-    "eslint-plugin-svelte": "^2.35.1",
+    "@rollup/plugin-yaml": "^4.1.2",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^22.13.14",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-svelte": "^2.46.1",
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
-    "node-sass-glob-importer": "^5.3.2",
-    "postcss": "^8.4.20",
-    "postcss-custom-media": "^9.0.1",
+    "postcss": "^8.5.3",
+    "postcss-custom-media": "^9.1.5",
     "postcss-preset-env": "^7.8.3",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.7.2",
-    "sass": "^1.57.1",
+    "sass": "^1.86.3",
     "stylelint": "14.16.1",
     "stylelint-config-html": "1.1.0",
-    "stylelint-scss": "4.4.0"
+    "stylelint-scss": "4.4.0",
+    "typescript": "5.3.3",
+    "unplugin-icons": "^0.20.1"
+  },
+  "peerDependencies": {
+    "typescript": "5.3.3"
   }
 }
